Image issue resolved

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <article class="flow">
      <div class="img-container">
-      <img src="/images/image-equilibrium.jpg" alt="Preview of Equilibrium #3429 NFT" />
+      <img src="./images/image-equilibrium.jpg" alt="Preview of Equilibrium #3429 NFT" />
 
      </div>
       <div class="flow">
@@ -47,7 +47,7 @@
         </div>
         <hr />
         <div class="author flex-align-center">
-          <img src="/images/image-avatar.png" alt="avatar" />
+          <img src="./images/image-avatar.png" alt="avatar" />
           <p>
             Creation of <span class="author-name">
               Jules Wyvern
